# AWSconnect

./: README.md  example_sqs_messages.json  logo  requirements.txt  setup.cfg  setup.py
.github/workflow/: publish.yaml
awsclient/: __main__.py  config.py  ec2.py  s3.py  sqs.py  sshclient.py
config/: key.pem
sqs/: example_sqs_messages.json
src/awsclient/: __main__.py  config.py  ec2.py  s3.py  sqs.py  sshclient.py
