[metadata]
name = awsclient
description = AWSClient is python utility that use boto3 library
long_description_content_type = text/markdown
url = https://github.com/zakharb/awsclient
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL3 License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    awsclient = awsclient.__main__:main