[metadata]
name = awsconnect
description = awsconnect is python utility that use boto3 library
long_description_content_type = text/markdown
url = https://github.com/zakharb/awsconnect
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    awsconnect = awsconnect.__main__:main