[metadata]
name = awsconnect
description = Easy connect to AWS and gather info about EC2, S3, SQS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zakharb/awsconnect
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    awsconnect = awsconnect.__main__:main